--- a/src/assets/games/count-down/CountDown.scss
+++ b/src/assets/games/count-down/CountDown.scss
@@ -1,6 +1,5 @@
 .prompt {
   width: 100%;
-  background-color: white;
   padding: 20px;
   font-size: 16pt;
   display: flex;
